--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 :root {
   color-scheme: dark;
+  font-family: monospace;
 }
 
 body {
   background: #000;
   color: #e5e5e5;
-  font-family: system-ui, -apple-system, sans-serif;
   margin: 0;
   padding: 1.5rem;
 }
@@ -33,7 +33,7 @@ button:hover { background: #2a2a2a; border-color: #555; }
 
 /* The "New" Button Highlight */
 nav button:first-child {
-  background: #0041cc; /* Amber */
+  background: #0051ff; /* Amber */
   /* color: black; */
   border: none;
   font-weight: 700;
@@ -56,10 +56,10 @@ li {
   animation: slideUp 0.4s ease-out;
 }
 
-li:hover { border-color: #0041cc; transform: translateY(-2px); }
+li:hover { border-color: #0051ff; transform: translateY(-2px); }
 
-li h3 { margin: 0 0 0.5rem 0; font-size: 0.8rem; color: #0041cc; opacity: 0.8; }
-li p { margin: 0; font-size: 1.1rem; line-height: 1.4; height: max-content;}
+li h3 { margin: 0 0 0.5rem 0; font-size: 12px; color: #0051ff; opacity: 0.8; }
+li p { margin: 0; font-size: 15px; line-height: 1.4; height: max-content;}
 
 /* Dialog / Modal Styling */
 dialog {
